# ams-backend

./: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
services/complaint_service/app/: config.py  main.py
services/complaint_service/app/api/: deps.py  schemas.py
services/complaint_service/app/api/routes/: complaints.py
services/complaint_service/app/application/: complaint_service.py
services/complaint_service/app/domain/: models.py
services/complaint_service/app/infrastructure/: complaint_repository.py  user_client.py
services/complaint_service/tests/: test_complaint_application.py  test_complaint_patch_schema.py  test_public_id.py
services/gateway/app/: config.py  main.py
services/user_service/app/: config.py  main.py  seed.py
services/user_service/app/api/: deps.py  schemas.py  schemas_internal.py
services/user_service/app/api/routes/: admin_users.py  auth.py  internal.py
services/user_service/app/application/: auth_service.py
services/user_service/app/domain/: models.py
services/user_service/app/infrastructure/: mongo.py  user_repository.py
services/user_service/tests/: test_admin_schemas.py
